# webcrawler

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
k8s/: bigsite-config.yml  crawler-config.yml  db-config.yml  db-schema.yml  db-secret-example.yml  fixture-site-deploy.yml  fixture-site-svc.yml  postgres-deploy.yml  redis-deploy.yml  seeder.yml  worker-config.yml  worker-deploy.yml
sql/: schema.sql
src/webcrawler/: __init__.py  config.py  fetcher.py  frontier.py  normalize.py  parser.py  seeder.py  store.py  worker.py  worker_main.py
tests/: conftest.py  test_config.py  test_fetcher.py  test_frontier.py  test_integration.py  test_normalize.py  test_parser.py  test_seeder.py  test_store.py  test_store_connect.py  test_worker.py
tests/fixtures/bigsite/: p0.html  p1.html  p10.html  p11.html  p12.html  p13.html  p14.html  p15.html  p16.html  p17.html  p18.html  p19.html  p2.html  p20.html  p21.html  p22.html  p23.html  p24.html  p25.html  p26.html  p27.html  p28.html  p29.html  p3.html  p30.html  p31.html  p32.html  p33.html  p34.html  p35.html  p36.html  p37.html  p38.html  p39.html  p4.html  p5.html  p6.html  p7.html  p8.html  p9.html
tests/fixtures/site/: a.html  b.html  index.html
