[project]
name = "webcrawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tonipenyallop", email = "kimtesu521@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "redis>=8.0.0",
    "selectolax>=0.4.10",
]

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
    asyncio_mode = "auto"
    testpaths = ["tests"]
